# Figures-and-Functions

./: .gitignore  CMakeLists.txt  README.md
include/figure/: Ellips.h  Figure.h  FunctionFigure.h  Rectangle.h  figure.h
include/function/: Function.cpp  Function.h  Operator.h
src/: CMakeLists.txt  main.cpp
src/figure/: CMakeLists.txt  Ellips.cpp  Figure.cpp  FunctionFigure.cpp  Rectangle.cpp  figure.cpp
src/function/: CMakeLists.txt  Function.cpp  Operator.cpp
test/: CMakeLists.txt  figure_ellips.cpp  function_parse.cpp  test1.cpp
