SET(SRC
	${SRC}
)

ADD_SUBDIRECTORY(figure)
ADD_SUBDIRECTORY(function)

ADD_EXECUTABLE(FF main.cpp)
ADD_LIBRARY(FigFunc ${SRC})

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")

TARGET_LINK_LIBRARIES(FF gsl gslcblas)
TARGET_LINK_LIBRARIES(FF FigFunc)

INSTALL(TARGETS FF DESTINATION ${PROJECT_SOURCE_DIR})
